# bilibili-vocaloid-stickers

./: .gitignore  README.md  aniconv.py  bskindump.py  pyproject.toml  skin_conv_gif.py  skin_dump.py  sticker_get.py  sticker_get_all.py  sticker_list.csv  sticker_list.tsv  sticker_resize2tg.py
assets/: stickers.tsv  telegram.ini
assets/nft/洛天依11周年QQ表情/: decode.py
assets/themes/2156/: suit_items.thumbup.0.properties.image_ani_cut.svga
assets/themes/2554/: suit_items.thumbup.0.properties.image_ani.svga
assets/themes/33372/: suit_items.thumbup.0.properties.image_ani_cut.svga
assets/themes/35789/: suit_items.thumbup.0.properties.image_ani_cut.svga
python/: conf.py  connection.py  main.py  qq_sticker.py  sticker.py  theme.py
secrets/: .gitkeep
skindump/2156/: suit_items.thumbup.0.properties.image_ani.svga
skindump/2180/: suit_items.thumbup.0.properties.image_ani_cut.svga
skindump/2554/: suit_items.thumbup.0.properties.image_ani_cut.svga
skindump/5766/: suit_items.thumbup.0.properties.image_ani.svga
skins/2180/: suit_items.thumbup.0.properties.image_ani.svga
skins/33372/: suit_items.thumbup.0.properties.image_ani.svga
skins/35789/: suit_items.thumbup.0.properties.image_ani.svga
skins/54182/: suit_items.thumbup.0.properties.image_ani.svga  suit_items.thumbup.0.properties.image_ani_cut.svga
skins/5766/: suit_items.thumbup.0.properties.image_ani_cut.svga
skins/6052/: suit_items.thumbup.0.properties.image_ani.svga  suit_items.thumbup.0.properties.image_ani_cut.svga
svga/: svga.min.js  template.html
(+4 files in other folders)
