[project]
name = "bilibili-vocaloid-stickers"
version = "2023.10.15"
description = "哔哩哔哩 V 家表情包"
authors = []
dependencies = [
    "requests~=2.31.0",
    "pillow~=10.1.0",
    "toml~=0.10.2",
    "cos-python-sdk-v5~=1.9.26",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "SEE README"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start = "python3 python/main.py"
